2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-ios.h: New file.
	* poke/pk-ios.c: Likewise.
	* poke/Makefile.am (poke_SOURCES): Add pk-ios.h and pk-ios.c.
	* poke/pk-cmd-ios.c (pk_cmd_file): Use pk_open_ios.
	* poke/poke.c (NO_AUTO_MAP_ARG): Define.
	(long_options): Add no-auto-map info.
	(parse_args_1): Handle NO_AUTO_MAP_ARG.
	(parse_args_2): Likewise.
	(print_help): Document --no-auto-map.
	(parse_args_2): Use pk_open_ios to open files specified in the
	command line.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (poke_auto_map_p): Define.
	* poke/poke.h: Likewise.
	* poke/pk-cmd-set.c (set_auto_map): Define.
	(set_cmds): Add set_auto_map.
	(pk_cmd_set_auto_map): New function.
	* poke/pk-cmd-ios.c (pk_cmd_file): Acknowledge poke_auto_map_p.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (pk_array_nelem): Prototype.
	* libpoke/pk-val.c (pk_array_nelem): New function.
	* poke/poke.pk (auto_map): Define.
	* poke/pk-cmd-ios.c (pk_cmd_file): Process auto maps.
	* poke/pk-map.c (pk_map_create): Fix chaining of map-ios.

2020-05-17  Bruno Haible  <bruno@clisp.org>

	build: Bump minimum needed Automake version.
	* bootstrap.conf (buildreq): Require automake >= 1.16.

2020-05-16  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pvm.c: Remove include xalloc.h.
	(pvm_init): Use calloc instead of xzalloc.

2020-05-16  Tim Rühsen  <tim.ruehsen@gmx.de>

	* libpoke/pkl-parser.c: Remove include xalloc.h.
	(pkl_parser_init): Use calloc instead of xzalloc.
	(pkl_parse_file): Use strdup instead of xstrdup.
	Allocate and check memory early in the function.
	(pkl_parse_buffer): Use strdup instead of xstrdup.
	Allocate and check memory early in the function.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* maps/Makefile.am (dist_maps_DATA): Distribute mp3.map.

2020-05-17  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-map.c (pk_map_load_parsed_map): Use pk_type_code and
	pk_typeof.
	(pk_map_resolve_map): Likewise.