@@ -114,6 +114,11 @@ char *poke_doc_viewer = NULL;
 
 int poke_auto_map_p = 1;
 
+/* The following global determines whether map information shall be
+   included in the REPL prompt.  Defaults to `no'.  */
+
+int poke_prompt_maps_p = 0;
+
 /* This is used by commands to indicate to the REPL that it must
    exit.  */
 
